--- a/AlphaWallet/Localization/ja.lproj/Localizable.strings
+++ b/AlphaWallet/Localization/ja.lproj/Localizable.strings
@@ -522,7 +522,7 @@
 "token.transactionConfirmation.error.description.gasLimitTooHigh" = "The gas price specified for this transaction is too high. AlphaWallet is using a live oracle and updates the gas price every 15 seconds. We recommend you to choose preselected amount (Slow, Average, Fast).";
 "token.transactionConfirmation.error.description.possibleChainIdMismatchError" = "You might be sending this transaction on the wrong chain.";
 "token.transactionConfirmation.error.description.executionRevertedError" = "It looks like you are trying to run a smart contract and the logic of that smart contract returns an error.";
-"token.transactionConfirmation.error.rectifyButtonTitle.insufficientFundsError" = "Buy %@";
+"token.transactionConfirmation.error.rectifyButtonTitle.insufficientFundsError" = "My Address";
 "token.transactionConfirmation.error.rectifyButtonTitle.nonceTooLowError" = "Correct Nonce";
 "token.transactionConfirmation.error.rectifyButtonTitle.gasPriceTooLow" = "Set Speed";
 "token.transactionConfirmation.error.rectifyButtonTitle.gasLimitTooLow" = "Set Speed";
